[gd_scene load_steps=5 format=3 uid="uid://buwh0bfare8gh"]

[ext_resource type="PackedScene" uid="uid://gmnrfjnd6wf6" path="res://elements/enemy/enemy.tscn" id="1_27l2b"]
[ext_resource type="Texture2D" uid="uid://bwuwyv2g4p378" path="res://assets/enemy/bat.png" id="2_g5xap"]
[ext_resource type="Script" uid="uid://ciq74ytnse3ms" path="res://elements/enemy/enemy_bat.gd" id="2_tt1bq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tt1bq"]
size = Vector2(394, 56)

[node name="EnemyBat" instance=ExtResource("1_27l2b")]
script = ExtResource("2_tt1bq")
hp = 50.0
speed = 120.0
atk = 40.0

[node name="Sprite2D" parent="." index="0"]
position = Vector2(0, -424)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_g5xap")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]
position = Vector2(0, -24)
shape = SubResource("RectangleShape2D_tt1bq")

[node name="TimerCool" type="Timer" parent="." index="5"]
one_shot = true

[node name="TimerImpact" type="Timer" parent="." index="6"]
one_shot = true

[connection signal="timeout" from="TimerImpact" to="." method="_on_timer_impact_timeout"]
